[Win] REGRESSION(272822@main): StreamClientConnection.h(216,20): error: call to implicitly-deleted copy constructor of 'StreamClientConnection::SendSyncResult<PrepareForDisplay>' https://bugs.webkit.org/show_bug.cgi?id=267294 rdar://120756511

Reviewed by Alex Christensen.

Fujii suggested this fix, and I initially thought I could do better by modifying WTF::Expected,
but after looking at it for a few hours, I'm not sure why MSVC doesn't see the move constructor.
Soon we'll have std::expected and this will hopefully not be an issue.

Also move a NO_RETURN_DUE_TO_CRASH macro to make MSVC happy.

* Source/WTF/wtf/Expected.h:
(std::experimental::fundamentals_v3::__expected_detail::constexpr_base::constexpr_base):
* Source/WebCore/testing/Internals.cpp:
(WebCore::Internals::terminateWebContentProcess):
* Source/WebCore/testing/Internals.h: